--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ html {
   --title-text-color: #212121;
   --hero-title: #ffffff;
   --accent-color: #2196f3;
+  --cubic-bezier: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -140,7 +141,7 @@ header {
   font-size: 14px;
   line-height: 16px;
   transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .site-nav .link:hover,
@@ -158,7 +159,7 @@ header {
   font-size: 14px;
   line-height: 16px;
   transition: color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 
 /*.telefon {
@@ -264,14 +265,14 @@ header {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-
+  z-index: 3;
   opacity: 1;
 
   visibility: visible;
 
   transition-property: opacity;
   transition-duration: 2000ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .backdrop.is-hidden {
@@ -291,20 +292,19 @@ header {
   left: 50%;
   transform: translate(-50%, -50%);
 
-  min-width: 528px;
-  min-height: 581px;
+  width: 528px;
+  height: 581px;
   background-color: #fff;
   border-radius: 4px;
-  padding: 15px;
+  padding: 0;
 
   transition-property: all;
   transition-duration: 3000ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 
-.button {
+/*.button {
   content: "";
-  color: var(--title-text-color);
   background-color: #f5f4fa;
   font-weight: 500;
   font-size: 16px;
@@ -313,22 +313,194 @@ header {
 
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+}*/
 
 .button-modal {
-  display: block;
-  border: none;
+  display: flex;
+  justify-content: flex-end;
+  /* flex-direction: row;*/
   border-radius: 50%;
   width: 30px;
   height: 30px;
   margin-left: 490px;
-  background-image: url(../icon/close.svg);
+  margin-top: 8px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  fill: var(--title-text-color);
 }
 
 .icon-close {
-  position: fixed;
-  width: 30px;
-  height: 30px;
+  position: center;
+  margin: auto;
+  width: 11px;
+  height: 11px;
+}
+
+.button-modal:hover,
+.button-modal:focus {
+  fill: var(--accent-color);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubic-bezier);
+  /*border: 1px solid var(--accent-color);*/
+}
+
+.modal-list {
+  /*position: absolute;*/
+  color: #212121;
+  display: flex;
+  flex-direction: column;
+  padding-left: 41px;
+}
+
+.modal-text {
+  display: flex;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  justify-content: start;
+  color: var(--title-text-color);
+  margin-bottom: 16px;
+  margin-top: 2px;
+  padding-left: 5px;
+}
+
+.modal-form {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-services {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-input:hover,
+.modal-input:focus {
+  border: 1px solid var(--accent-color);
+  border-width: 1px;
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubic-bezier);
+  outline: none;
+}
+.modal-input:hover + svg,
+.modal-input:focus + svg {
+  fill: var(--accent-color);
+  transition-property: border, fill;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubic-bezier);
+}
+
+.modal-button-title {
+  position: center;
+  width: 200px;
+  height: 50px;
+  margin-left: 120px;
+  margin-top: 30px;
+  background: #2196f3;
+  border-radius: 4px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 30px;
+  color: var(--hero-title);
+}
+
+.modal-name {
+  margin-bottom: 4px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+
+.modal-input {
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  padding-left: 42px;
+  outline: none;
+}
+
+.modal-icon {
+  position: absolute;
+  top: 29px;
+  left: 14px;
+  height: 18px;
+  width: 18px;
+}
+
+.modal-services label {
+  margin-bottom: 4px;
+}
+
+.modal-link {
+  color: var(--accent-color);
+  border-bottom: 1px solid var(--accent-color);
+  display: inline-block;
+  line-height: 0.85;
+}
+.checkbox {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  padding-left: 10px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.checkbox input {
+  margin-top: 3px;
+  margin-right: 9px;
+}
+
+.comment-text {
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  resize: none;
+  margin-bottom: 20px;
+  margin-right: 40px;
+  padding: 12px 16px;
+}
+
+.comment-text::placeholder {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.2;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.comment-text:focus {
+  border: 1px solid var(--accent-color);
+  border-width: 1px;
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: var(--cubic-bezier);
+  outline: none;
 }
 
 /* Feature-list*/
@@ -416,6 +588,7 @@ header {
 
 .our-work-blok {
   position: relative;
+  /* z-index: 1;*/
 }
 
 .text-our-work {
@@ -522,7 +695,7 @@ header {
   align-items: center;
   transition-property: color, background-color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .icon-item-list:hover,
@@ -573,7 +746,7 @@ header {
   border-radius: 4px;
   transition-property: color, background-color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .customers .item:not(:last-child) {
@@ -689,7 +862,7 @@ header {
   align-items: center;
   transition-property: background-color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .subscribe-icon {
@@ -699,6 +872,73 @@ header {
 
 .subscribe-list li:hover {
   background-color: var(--accent-color);
+}
+
+.footer-subscribe {
+  margin-left: 93px;
+}
+
+.footer-subscribe h3 {
+  text-transform: uppercase;
+  color: var(--hero-title);
+  margin-bottom: 20px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.footer-subscribe-field {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: baseline;
+}
+
+.footer-subscribe-window {
+  padding-right: 12px;
+}
+
+.form-input {
+  height: 48px;
+  width: 358px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  padding: 0 20px;
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.sign-in-button {
+  height: 50px;
+  width: 200px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background-color: var(--accent-color);
+  padding-left: 29px;
+  padding-right: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+}
+
+.form-button-icon {
+  display: flex;
+  height: 24px;
+  width: 24px;
+  margin-left: 10px;
 }
 
 /* Portfolio */
@@ -734,7 +974,7 @@ header {
   color: var(--title-text-color);
   transition-property: color, background-color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .buttons-form1:hover {
@@ -759,7 +999,7 @@ header {
   color: var(--title-text-color);
   transition-property: color, background-color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .buttons-form2:hover {
@@ -784,7 +1024,7 @@ header {
   color: var(--title-text-color);
   transition-property: color, background-color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .buttons-form3:hover {
@@ -809,7 +1049,7 @@ header {
   color: var(--title-text-color);
   transition-property: color, background-color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .buttons-form4:hover {
@@ -834,7 +1074,7 @@ header {
   color: var(--title-text-color);
   transition-property: color, background-color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .buttons-form5:hover {
@@ -895,7 +1135,7 @@ header {
   transform: translateY(100%);
   transition-property: transform;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--cubic-bezier);
 }
 
 .text-blok {
